# binance

./: .gitignore  DOCS.md  README.md  agents.md  pyproject.toml
.githooks/: commit-msg
scripts/: check_commit_messages.py  run_baselines.py  run_cross_sectional.py  run_funding_spike.py
src/candlepilot/: __init__.py  cli.py
src/candlepilot/backtest/: __init__.py  costs.py  dataset.py  engine.py  execution.py  metrics.py  portfolio.py  position.py
src/candlepilot/data/: __init__.py  ingest.py  schema.py  store.py  vision.py
src/candlepilot/evaluate/: __init__.py  significance.py  splits.py  sweep.py
src/candlepilot/screen/: __init__.py  cross.py  features.py  panel.py  screener.py
src/candlepilot/strategies/: __init__.py  baselines.py  reference.py
tests/: test_engine.py  test_evaluate.py  test_ingest.py  test_portfolio.py  test_position.py  test_schema.py  test_screen.py
