[project]
name = "candlepilot"
version = "0.1.0"
description = "Binance USDT-M perpetual futures screening and backtesting research"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
candlepilot = "candlepilot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
